--- a/meccsek.html
+++ b/meccsek.html
@@ -37,7 +37,7 @@
         @keyframes move { 0% { transform: translate(0, 0) scale(1); } 100% { transform: translate(10vw, 10vh) scale(1.2); } }
 
         #goal-banner {
-            position: fixed; top: -100px; left: 0; right: 0; height: 65px;
+            position: fixed; top: -100px; left: 0; right: 0; height: 65px; z-index: 9999 !important;
             background: var(--neon-green); color: #000; display: flex; align-items: center; justify-content: center;
             font-family: 'Orbitron'; font-weight: 900; font-size: 1.6rem; z-index: 2000; 
             transition: 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); box-shadow: 0 0 50px rgba(0,255,136,0.6);
@@ -99,7 +99,11 @@
         transform: scale(1);
     }
 }
-
+.mobile-quick-nav {
+    z-index: 9000 !important;
+    position: fixed !important;
+    bottom: 20px; /* Biztosítsd, hogy ne lógjon ki alul */
+}
 .match-card.goal-highlight {
     animation: goal-pulse 0.8s ease-in-out infinite !important;
     border: 2px solid #ff3e3e !important;
@@ -538,6 +542,7 @@ function triggerGoalEffect(matchId, teamName, logoUrl) {
     </script>
 </body>
 </html>
+
 
 
 
